fix form z-index

--- a/client/src/styles/partials/moviesList.css
+++ b/client/src/styles/partials/moviesList.css
@@ -55,6 +55,7 @@ button[type="submit"] {
   position: sticky;
   border-left: 2px solid var(--blue-30);
   background: none;
+  z-index: 1;
 }
 
 .form-toggle {
